<resources>
    <string name="app_name">TakeAndGo</string>
    <string name="title_activity_add_client">AddClientActivity</string>

    <string name="action_settings">Settings</string>


    <string name="hint_email">example@example.com</string>
    <string name="hint_phone">054896790</string>
    <string name="hint_credit_card">7574 3635 3445 2354</string>
    <string name="add_client">Add CLient</string>
    <string name="branch_city">City</string>
    <string name="branch_street">Street</string>
    <string name="branch_street_number">Street Number</string>
    <string name="amount_of_parking_places">Amount of Parking Places</string>
    <string name="add_branch">Add Branch</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="client_email">Email:</string>
    <string name="hint_last_name">Levi</string>
    <string name="hint_first_name">Aaron</string>
    <string name="credit_card">Credit Card:</string>
    <string name="phone">Phone:</string>
    <string name="air_conditioner">Air Conditioner</string>
    <string name="hint_car_name">Mercedes</string>
    <string name="add_car_model">Add Car Model</string>
    <string name="volume_motor">Volume Motor</string>
    <string name="car_model_automatic">Automatic</string>
    <string name="car_brand">Car Brand</string>
    <string name="add_car_button">Add a Car</string>
    <string name="car_luggage">Luggage</string>
    <string name="car_passenger">Passenger</string>
    <string name="password">Password</string>

    <string name="car_color">Color</string>
    <string name="title_activity_car_model_list">Car Model List</string>
    <string name="car_door">Door</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="preference_login">PreferenceLogin</string>
    <string name="signedIn">SignedIn</string>
    <string name="register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_password">Error Invalid Password</string>
    <string name="error_field_required">Error Field Required</string>
    <string name="error_invalid_email">Error Invalid Email</string>
    <string name="client_id">CLIENT_ID</string>
</resources>
