<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.binyamin.android5778_0445_7734_01.controller.AddBranchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <TextView
                android:id="@+id/textView_branch_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/branch_city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText_branch_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPostalAddress"
                android:hint="ex: Paris" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <TextView
                android:id="@+id/textView_branch_street"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/branch_street" />

            <EditText
                android:id="@+id/editText_branch_street"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPostalAddress"
                android:hint="ex: Champs Elysee" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">


            <TextView
                android:id="@+id/textView_branch_street_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/branch_street_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editText_branch_street" />

            <EditText
                android:id="@+id/editText_branch_street_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="ex: 23"
                app:layout_constraintStart_toEndOf="@+id/textView_branch_street_number"
                app:layout_constraintTop_toBottomOf="@+id/editText_branch_street" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">


            <TextView
                android:id="@+id/textView_amount_parking_place"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/amount_of_parking_places" />

            <EditText
                android:id="@+id/editText_amount_parking_place"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="ex: 11" />
        </LinearLayout>

        <Button
            android:id="@+id/button_add_branch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_branch"
            android:layout_gravity="center"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
